[package]
name = "callsy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
incremental = true

[profile.release]
opt-level = 3
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = "0.11.10"
clap = { version = "3.0", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }